#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

2013-11-08 Andy Salnikov  (on branch V00-11-00-hddl)
- fix unit test

2013-11-08 Andy Salnikov  (on branch V00-11-00-hddl)
- more or less complete, can regenerate everyhting from DDL,
  results are practically identical except for formatting
  
2013-11-08 Andy Salnikov  (on branch V00-11-00-hddl)
- in parser substitute new tag names with internal tag names
- generators now understand @self, @config, etc.

2013-11-08 Andy Salnikov  (on branch V00-11-00-hddl)
- fix test

2013-11-08 Andy Salnikov  (on branch V00-11-00-hddl)
- add tags validation

2013-11-07 Andy Salnikov  (on branch V00-11-00-hddl)
- add code for matching comments to declarations

2013-11-07 Andy Salnikov  (on branch V00-11-00-hddl)
- more or less complete reader implementation, not well tested yet
- sill need to do something about comments

2013-11-06 Andy Salnikov  (on branch V00-11-00-hddl)
- add simple unit test for scanner/parser

2013-11-06 Andy Salnikov  (on branch V00-11-00-hddl)
- add hdf5 definitoions to parser
- few fixes everywhere

2013-11-05 Andy Salnikov  (on branch V00-11-00-hddl)
- first version of lexer and parser

Tag: V00-12-00
2013-11-05 Andy Salnikov
- preparation for new DDL parser: few tags renamed:
  - no-proxy to embedded (in h5 schema)
  - c++-definition to force_definiton (in constructor)
  - no-c++-definition to external (in constructor)
- last two tags are not used anywhere

2013-11-03 Andy Salnikov (on branch V00-11-00-hddl)
- first version of dump-hddl backend

Tag: V00-11-00
2013-11-02 Andy Salnikov
- small scale refactoring of backends:
- all constructors now take the same set of arguments, so there is no 